<resources>
    <string name="app_name">ReproductorMusicaApp</string>
    <string name="fotoportada">fotoportada</string>
    <string name="fotoPortada2">fotoortada2</string>
    <string name="DescripcionPortada">Bienvenido!</string>
    <string name="PortadaBotonIniciarSesion">Iniciar Sesión</string>
    <string name="PortadaBotonRegistrarse">Registrarse</string>
    <string name="descripcionActivityRegistro">Bienvenido!\nComplete todos los campos para realizar el registro.</string>
    <string name="registroNombre">Nombre...</string>
    <string name="registroPassword">Password...</string>
    <string name="registroEmail">Email...</string>
    <string name="botonRegistrarseActivityReg">Registrarse</string>
    <string name="insideAppMensajeBienvenida">Bienvenido!\nReproduce la canción que te apetezca escuchar.</string>
    <string name="registroApellido">Apellido...</string>
    <string name="registroNombreDeCuenta">alias...</string>
    <string name="activityInsideFoto"></string>
    <string name="fotoInsideApp"></string>
    <string name="textEmailAddress"></string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="botonLoginInInsideApp">Entrar</string>
    <string name="loginExitoTitulo">Registro completado con exito!</string>
    <string name="botonRegistroConExito">Entrar!</string>
    <string name="fotoHammerToFall">hammerToFall</string>
    <string name="cambiarColor">Color</string>
    <string name="iconoCasa">Color</string>
    <string name="botonTraduccionIdioma">Idioma</string>




</resources>


