<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@drawable/gradient_list"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/apellidoRegistro"
        android:layout_width="262dp"
        android:layout_height="168dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/descripcionActivityRegistro"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_margin="10sp"
        android:autofillHints=""
        android:fontFamily="sans-serif-thin"
        android:ems="10"
        android:hint="@string/registroNombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoRegistro"
        app:layout_constraintVertical_bias="0.062" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:ems="10"
        android:layout_margin="10sp"
        android:hint="@string/registroPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/registroEmail"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_margin="10sp"
        android:hint="@string/registroEmail"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="0.0"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />



    <EditText
        android:id="@+id/nombreDeUsuarioRegistro"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:ems="10"
        android:layout_margin="10sp"
        android:hint="@string/registroApellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:ems="10"
        android:layout_margin="10sp"
        android:hint="@string/registroNombreDeCuenta"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreDeUsuarioRegistro"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/botonRegistrarseActivityReg"
        android:textColor="#E47979"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textSize="16dp"
        android:onClick="funcionRegistrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoRegistro"
        app:layout_constraintVertical_bias="0.83" />

</androidx.constraintlayout.widget.ConstraintLayout>