<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@drawable/gradient_list"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/foto_portada"
        android:layout_width="245dp"
        android:layout_height="343dp"
        android:contentDescription="@string/fotoportada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@drawable/foto_portada" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/DescripcionPortada"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonIniciarSesion"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="40sp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="sans-serif-thin"
        android:onClick="functionLogin"
        android:text="@string/PortadaBotonIniciarSesion"
        android:textColor="@color/letras"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/botonRegistrarse"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="40sp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="sans-serif-thin"
        android:onClick="functionRegister"
        android:text="@string/PortadaBotonRegistrarse"
        android:textColor="@color/letras"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonIniciarSesion"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>